Change Log
----------

  V0.34
  - Fixes:
     - All gadgets have protected copy constructors.
  
  - New Features:


  V0.33b (20080522)
  
  - Fixes:
     - Fixed warnings in the AnimButton/BitmapButton constructors.
     
  - New Features:
     - Added makefiles to "Hello World" examples.

  V0.33 (20080522)
  
  - Fixes:
     - Gadget::click() checks correct class variable for double click timer.
     - Deleted ListBoxItem class.
     - Removed "closable" from gadget flags.
     - SkinnedWindow resizes titlebar correctly.
     - Wired up SkinnedWindow depth button visibility to skin data.
     - More consistent names for SkinnedScreen button pointers.
     - Added missing GraphicsPort::drawPixel() functions.
     - Made char pointers const-correct for devkitPro r23 compatibility.
     - System makes copies of string data where appropriate.
     - Removed duplicate title string pointer from window classes.
     - SkinnedWindow only drags when titlebar clicked, not any border gadget.
     - Fixed crash when gadget closed but parent subsequently points one of its
       pointers back at it.
     - Fixed checkbox incorrectly setting font pointer instead of leaving it to
       the base class.
     - Fixed overflow in slider grip position calculations.
     - Slider grip moves one page width/height when the gutter is clicked.
     - Scrollbar buttons default to adjusting grip value by 1.
     - Gadget::addGadget() checks to see if new children want to steal the focus
       and will grant it if necessary.
     - Focus and blur propagate throughout the gadget ancestor list even if a
       gadget along the way already has focus (or not).
     - Moved _clickedGadget pointer into Woopsi class and deleted all other
       occurences.
     - Changed _clickedGadget handling so that release works with the single
       pointer in Woopsi.
     - Windows drag correctly if only one co-ordinate has changed.
     - Screen title bar no longer steals focus when clicked.