@@ -40,7 +40,7 @@ public:
 	 * @param text The text to display in the window.
 	 * @param font Optional font to use for text output.
 	 */
-	FileRequester(s16 x, s16 y, u16 width, u16 height, const char* title, const char* path, FontBase* font = NULL);
+	FileRequester(s16 x, s16 y, u16 width, u16 height, const char* title, const char* path, u32 flags, FontBase* font = NULL);
 
 	/**
 	 * Handles events raised by its sub-gadgets.
