@@ -1,0 +1,9 @@
+// Includes
+#include "filereqdemo.h"
+
+int main(int argc, char* argv[]) {
+
+	// Create the file requester demo application
+	FileReqDemo app;
+	return app.main(argc, argv);
+}
